fix line width on amiller text

--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -27,7 +27,10 @@ sections of text. Bug reports should be communicated at
 
 \section{Introduction}
 
-"[It is hard to] figure out how to bootstrap an incentives model, because there's no incentive except for the virtual currency payments, and yet the value of the virtual currency payments only matters if it's secure, and it's only secure if the incentive mechanism works....." - Andrew Miller
+"[It is hard to] figure out how to bootstrap an incentives model, because
+there's no incentive except for the virtual currency payments, and yet the
+value of the virtual currency payments only matters if it's secure, and it's
+only secure if the incentive mechanism works....." - Andrew Miller
 
 Here is an enumeration of various incentives that exist in the Bitcoin software
 and p2p network. Some of these incentives are much stronger than others, but a
