about miners doing predictions

--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -88,6 +88,8 @@ processed faster than "normal". (?)
 
 \item Incentives to provide initial block downloads.
 
+\item ...the effect a fluctuating price can have on mining - price drops mean offline miners, which means 'dark hashpower'. A bubble can result in miners overbuying, anticipating a sellout at much higher prices, which can also affect the mining ecosystem when the bubble doesn't reach the anticipated heights.
+
 \end{enumerate}
 
 \section{Conclusion}
