--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -6,6 +6,7 @@
 \usepackage[onehalfspacing]{setspace}
 \usepackage{hyperref}
 \usepackage[usenames,dvipsnames]{color}
+\usepackage{gitinfo}
 
 \title{Bitcoin Incentives}
 \author{Andrew Poelstra}
@@ -94,7 +95,7 @@ processed faster than "normal". (?)
 
 \section{Conclusion}
 
-\begin{thebibliography}
+\begin{thebibliography}{9}
 \bibitem{satoshi} \url{https://www.bitcoin.org/bitcoin.pdf}
 \end{thebibliography}
 
