be sure to talk about sybil attacks

--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -36,8 +36,16 @@ notable in very specific circumstances.
 
 \section{Incentive}
 
-An incentive is what happens when a giant entropy monster reaches out and grabs
-you.
+An incentive in a p2p system exists when there is an opportunity cost to
+inaction.
+
+\section{Ingredients}
+
+\paragraph{Byzantine} definition?
+
+\paragraph{Byzantine generals' problem}
+
+\paragraph{Sybil attack}
 
 \section{Incentives}
 
