--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -29,10 +29,19 @@ value of the virtual currency payments only matters if it's secure, and it's
 only secure if the incentive mechanism works....." - Andrew Miller
 
 Here is an enumeration of various incentives that exist in the Bitcoin software
-and p2p network. Some of these incentives are much stronger than others, but a
-rating scheme or ordering scheme has yet to be devised. Additionally, some have
-been observed in action in the wild, while others are more obscure and only
-notable in very specific circumstances.
+and p2p network.
+
+Some incentives are much stronger than others, by orders of magnitude. There
+could eventually be a rating scheme or a comparison method.
+
+Some of these incentives are implemented in code and are enforced by consensus
+rules. Other incentives are based not on code but instead on the effects of the
+software, or implications derived from the software, independent of whether or
+not the incentive is "hard coded".
+
+Some of these incentives have been observed in the wild, while others have
+persistent presence, while different others might be only somewhat theoretical
+and not directly observed yet.
 
 \section{Incentive}
 
