warn about the impending ad hoc explanation

--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -43,6 +43,8 @@ Some of these incentives have been observed in the wild, while others have
 persistent presence, while different others might be only somewhat theoretical
 and not directly observed yet.
 
+Bitcoin does this and here's why.
+
 \section{Incentive}
 
 An incentive in a p2p system exists when there is an opportunity cost to
