describe byzantine failure and sybil attacks

--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -52,13 +52,17 @@ inaction.
 
 \section{Ingredients}
 
-\paragraph{Byzantine}
+\paragraph{Byzantine failure} This is a type of failure in distributed systems
+in which components of a system fail in arbitrary ways. These failures can
+include stopping or crashing as well as processing requests incorrectly,
+corrupting local state, and producing incorrect or inconsistent outputs, as
+well as a variety of other amusing failure modes.
 
-\paragraph{Byzantine generals' problem}
+\paragraph{Sybil attack} An adversary can endlessly create misbehaving nodes in
+a p2p network, especially when the existing nodes on the network are already
+programmed to accept new incoming connections from unknowns.
 
-\paragraph{Sybil attack}
-
-\section{The Byzantine Generals' Problem}
+\section{Satoshi's Byzantine Generals' Problem}
 
 (This wording is based on \url{bitcoin.org/byzantine.html} originally.)
 
