--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -50,6 +50,8 @@ Bitcoin does this and here's why.
 An incentive in a p2p system exists when there is an opportunity cost to
 inaction.
 
+Alternatively: an incentive is a stable set of features of an anticipated or hypothetical environment, such that the reward for taking some action (including whatever future constraints or consequences this imposes on future behavior locally) is higher than the reward for not taking that action, relative to how much higher it would be if those features were absent.
+
 \section{Ingredients}
 
 \paragraph{Byzantine failure} This is a type of failure in distributed systems
