better url for byzantine.html

--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -70,7 +70,7 @@ programmed to accept new incoming connections from unknowns.
 
 \section{Satoshi's Byzantine Generals' Problem}
 
-(This wording is based on \url{bitcoin.org/byzantine.html} originally.)
+(This wording is based on \url{http://bitcoin.org/byzantine.html} originally.)
 
 A number of Byzantine Generals each have a computer and want to attack the
 King's wi-fi by brute forcing the password, which they've learned is a certain
