trivial thx paragraph

--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -170,6 +170,8 @@ timestamps, so this is apparently not a concern in practice.)
 
 \section{Conclusion}
 
+\paragraph{Thank you.} Many individuals have both directly and indirectly contributed to the ideas presented in this document, including: ...
+
 \begin{thebibliography}{9}
 \bibitem{satoshi} \url{https://www.bitcoin.org/bitcoin.pdf}
 \end{thebibliography}
