--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -110,12 +110,15 @@ can safely attack at the agreed time.
 
 \subsection{Maaku's Physical Explanation of Bitcoin and Proof-of-Work}
 
-Proof-of-Work works because of the economic restriction provided by the second
+Proof-of-Work (PoW) works because of the economic restriction provided by the second
 law of thermodynamics. Even though you can't know you're in the consensus set,
 you can put a raw economic cost on the probability of you being tricked.
 Bitcoin uses proof-of-work to tie Bitcoin consensus to a fundamentally scarce
 resource, entropy. It is possible to use another physically scarce resource
-instead, but there is no alternative to the universal scarcity of entropy.
+instead, but there is no alternative to the universal scarcity of entropy. As
+maaku puts it, "I could be an AI trapped in a simulation with no knowledge of
+the outside world other than the foundational laws of physics, and from that be
+able to assert the validity of proof-of-work."
 
 \section{Incentives}
 
