incentives do not need to be stable

--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -50,7 +50,7 @@ Bitcoin does this and here's why.
 An incentive in a p2p system exists when there is an opportunity cost to
 inaction.
 
-Alternatively: an incentive is a stable set of features of an anticipated or
+Alternatively: an incentive is a set of features of an anticipated or
 hypothetical environment, such that the reward for taking some action
 (including whatever future constraints or consequences this imposes on future
 behavior locally) is higher than the reward for not taking that action,
