consolidate definitions section

--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -45,18 +45,14 @@ and not directly observed yet.
 
 Bitcoin does this and here's why.
 
-\section{Incentive}
+\section{Definitions}
 
-An incentive in a p2p system exists when there is an opportunity cost to
-inaction.
-
-Alternatively: an incentive is a set of features of an anticipated or
-hypothetical environment, such that the reward for taking some action
-(including whatever future constraints or consequences this imposes on future
-behavior locally) is higher than the reward for not taking that action,
-relative to how much higher it would be if those features were absent.
-
-\section{Ingredients}
+\paragraph{Incentive} An incentive in a p2p system exists when there is an
+opportunity cost to inaction. Alternatively, an incentive is a set of features
+of an anticipated or hypothetical environment, such that the reward for taking
+some action (including whatever future constraints or consequences this locally
+imposes on future behavior) is higher than the reward for not taking that
+action, relative to how much higher it would be if those features were absent.
 
 \paragraph{Byzantine failure} This is a type of failure in distributed systems
 in which components of a system fail in arbitrary ways. These failures can
