--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -28,20 +28,17 @@ there's no incentive except for the virtual currency payments, and yet the
 value of the virtual currency payments only matters if it's secure, and it's
 only secure if the incentive mechanism works....." - Andrew Miller
 
-Bitcoin is a novel p2p phenomenon which includes a decentralized
-consensus-derived history of transactions. The way to confirm the absence of a
-prior transaction is to have the entire history of prior transactions. However,
-the presence of physical reality imposes various constraints on system design
-and operation. There are many histories being generated simultaneously
-everywhere in the universe with the usual passage of time. The synchronization
-of these histories cannot happen faster than the communication latency of a
-system, nor faster than the speed of light anyway. For these reasons and
-others, possessing all recent transaction history "in real time" is problematic
-or impossible. Bitcoin provides some rules and incentives for maintaining a
-consensus history under these physical constraints. A complete mechanical or
-physical understanding of Bitcoin has yet to be introduced and is not offered
-here. This document focuses on an enumeration of incentives and constraints
-involved in Bitcoin.
+Bitcoin is a novel p2p payment network which performs transaction processing
+without the need for any centralized, trusted third party. Bitcoin achieves
+this through a decentralized consensus history of transactions provided to
+every participant. This history is required to confirm the absence of a prior
+transaction. However, history at other edges of the network is unavailable to
+other nodes, because of propagation delays and speed of light constraints.
+Bitcoin provides some rules and incentives for maintaining a consensus history
+under these (and other) physical constraints. A complete mechanical or physical
+understanding of Bitcoin has yet to be introduced and is not offered here. This
+document focuses on an enumeration of incentives and constraints involved in
+Bitcoin.
 
 Here is an enumeration of various incentives that exist in the Bitcoin software
 and p2p network.
@@ -123,15 +120,16 @@ can safely attack at the agreed time.
 
 \subsection{Maaku's Physical Explanation of Bitcoin and Proof-of-Work}
 
-Proof-of-Work (PoW) works because of the economic restriction provided by the second
-law of thermodynamics. Even though you can't know you're in the consensus set,
-you can put a raw economic cost on the probability of you being tricked.
-Bitcoin uses proof-of-work to tie Bitcoin consensus to a fundamentally scarce
-resource, entropy. It is possible to use another physically scarce resource
-instead, but there is no alternative to the universal scarcity of entropy. As
-maaku puts it, "I could be an AI trapped in a simulation with no knowledge of
-the outside world other than the foundational laws of physics, and from that be
-able to assert the validity of proof-of-work."
+Proof-of-Work (PoW) works because of the economic restriction provided by the
+second law of thermodynamics. Even though you can't know you're in the
+consensus set, you can put a raw economic cost on the probability of you being
+tricked.  Bitcoin uses proof-of-work to tie Bitcoin consensus to a
+fundamentally scarce resource, namely entropy. It is possible to use another
+physically scarce resource instead, but there is no alternative to the
+universal scarcity of entropy. As maaku puts it, "I could be an AI trapped in a
+simulation with no knowledge of the outside world other than the foundational
+laws of physics, and from that be able to assert the validity of
+proof-of-work."
 
 \section{Incentives}
 
