--- a/bitcoin-incentives.tex
+++ b/bitcoin-incentives.tex
@@ -189,7 +189,10 @@ timestamps, so this is apparently not a concern in practice.)
 
 \item Incentives to provide initial block downloads.
 
-\item ...the effect a fluctuating price can have on mining - price drops mean offline miners, which means 'dark hashpower'. A bubble can result in miners overbuying, anticipating a sellout at much higher prices, which can also affect the mining ecosystem when the bubble doesn't reach the anticipated heights.
+\item ...the effect a fluctuating price can have on mining - price drops mean
+offline miners, which means 'dark hashpower'. A bubble can result in miners
+overbuying, anticipating a sellout at much higher prices, which can also affect
+the mining ecosystem when the bubble doesn't reach the anticipated heights.
 
 \end{enumerate}
 
